--- a/backend/package.json
+++ b/backend/package.json
@@ -13,19 +13,20 @@
   "author": "Kasper Nilsson",
   "license": "ISC",
   "devDependencies": {
+    "@types/koa-bodyparser": "^4.3.10",
+    "@types/koa-router": "^7.4.4",
     "@types/node": "^18.11.18",
     "@typescript-eslint/eslint-plugin": "^5.48.1",
     "@typescript-eslint/parser": "^5.48.1",
     "eslint": "^8.32.0",
     "koa": "^2.14.1",
+    "koa-bodyparser": "^4.3.0",
     "nodemon": "^2.0.20",
     "typescript": "^4.9.4"
   },
-  "ts-standard": {
-    "project": "./tsconfig.json"
-  },
   "dependencies": {
     "dotenv": "^16.0.3",
+    "koa-router": "^12.0.0",
     "ts-node": "^10.9.1"
   }
 }
