--- a/backend/package.json
+++ b/backend/package.json
@@ -2,12 +2,12 @@
   "name": "server",
   "version": "1.0.0",
   "description": "A simple server for the projects REST-API.",
-  "main": "./server/src/server.ts",
+  "main": "./src/main.ts",
   "scripts": {
     "lint": "npx eslint . && echo \"Successfully Linted!\"",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node-esm ./server/src/server.ts",
-    "dev-start": "nodemon ./server/src/server.ts"
+    "start": "ts-node-esm ./src/main.ts",
+    "dev-start": "nodemon ./src/main.ts"
   },
   "keywords": [],
   "author": "Kasper Nilsson",
@@ -22,7 +22,8 @@
     "koa": "^2.14.1",
     "koa-bodyparser": "^4.3.0",
     "nodemon": "^2.0.20",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "@types/cors": "^4.0.0"
   },
   "dependencies": {
     "dotenv": "^16.0.3",
