--- a/backend/package.json
+++ b/backend/package.json
@@ -1,31 +1,32 @@
 {
-  "name": "server",
+  "name": "rock-paper-scissors-server",
   "version": "1.0.0",
-  "description": "A simple server for the projects REST-API.",
+  "description": "A simple server for the rock-paper-scissors game",
   "main": "./src/main.ts",
   "scripts": {
     "lint": "npx eslint . && echo \"Successfully Linted!\"",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node-esm ./src/main.ts",
-    "dev-start": "nodemon ./src/main.ts"
+    "test": "jest",
+    "start": "jest && ts-node-esm ./src/main.ts",
+    "dev-start": "jest && nodemon ./src/main.ts"
   },
-  "keywords": [],
+  "keywords": ["server", "rest-api", "typescript", "koa", "koa-router", "koa-bodyparser", "jest", "eslint"],
   "author": "Kasper Nilsson",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
+    "@babel/preset-typescript": "^7.18.6",
+    "@types/jest": "^29.4.0",
     "@types/koa-bodyparser": "^4.3.10",
     "@types/koa-router": "^7.4.4",
     "@types/node": "^18.11.18",
     "@typescript-eslint/eslint-plugin": "^5.48.1",
     "@typescript-eslint/parser": "^5.48.1",
     "eslint": "^8.32.0",
+    "jest": "^29.4.1",
     "koa": "^2.14.1",
     "koa-bodyparser": "^4.3.0",
     "nodemon": "^2.0.20",
+    "ts-jest": "^29.0.5",
     "typescript": "^4.9.4",
-    "@types/cors": "^4.0.0"
-  },
-  "dependencies": {
     "dotenv": "^16.0.3",
     "koa-router": "^12.0.0",
     "ts-node": "^10.9.1"
