--- a/backend/package.json
+++ b/backend/package.json
@@ -6,10 +6,19 @@
   "scripts": {
     "lint": "npx eslint . && echo \"Successfully Linted!\"",
     "test": "jest",
-    "start": "jest && ts-node-esm ./src/main.ts",
+    "start": "ts-node-esm ./src/main.ts",
     "dev-start": "jest && nodemon ./src/main.ts"
   },
-  "keywords": ["server", "rest-api", "typescript", "koa", "koa-router", "koa-bodyparser", "jest", "eslint"],
+  "keywords": [
+    "server",
+    "rest-api",
+    "typescript",
+    "koa",
+    "koa-router",
+    "koa-bodyparser",
+    "jest",
+    "eslint"
+  ],
   "author": "Kasper Nilsson",
   "license": "MIT",
   "devDependencies": {
@@ -18,17 +27,20 @@
     "@types/koa-bodyparser": "^4.3.10",
     "@types/koa-router": "^7.4.4",
     "@types/node": "^18.11.18",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.48.1",
     "@typescript-eslint/parser": "^5.48.1",
+    "dotenv": "^16.0.3",
     "eslint": "^8.32.0",
+    "http": "^0.0.1-security",
     "jest": "^29.4.1",
     "koa": "^2.14.1",
     "koa-bodyparser": "^4.3.0",
-    "nodemon": "^2.0.20",
-    "ts-jest": "^29.0.5",
-    "typescript": "^4.9.4",
-    "dotenv": "^16.0.3",
     "koa-router": "^12.0.0",
-    "ts-node": "^10.9.1"
+    "nodemon": "^2.0.20",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.0.5",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.4"
   }
 }
