--- a/backend/package.json
+++ b/backend/package.json
@@ -41,6 +41,7 @@
     "supertest": "^6.3.3",
     "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
+    "typedoc": "^0.23.24",
     "typescript": "^4.9.4",
     "zod": "^3.20.2"
   }
